Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,10 +1,1 @@
-{
-  "meta": {
-    "username": "LokiOfNZ",
-    "repositoryName": "LokiOfNZ.github.io",
-    "branch": "master"
-  },
-  "theme": {
-    "name": "Casper"
-  }
-}
+{"meta":{"username":"LokiOfNZ","repositoryName":"LokiOfNZ.github.io","branch":"master"},"site":{"url":"http://LokiOfNZ.github.io"},"socialnetwork":{"email":"nfoote@live.co.uk"},"theme":{"name":"Casper","url":"http://LokiOfNZ.github.io/themes/Casper"}}
