Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,1 +1,1 @@
-{"meta":{"username":"LokiOfNZ","repositoryName":"LokiOfNZ.github.io","branch":"master"},"site":{"url":"http://LokiOfNZ.github.io"},"socialnetwork":{"email":"nfoote@live.co.uk"},"theme":{"name":"Casper","url":"http://LokiOfNZ.github.io/themes/Casper"}}
+{"meta":{"username":"LokiOfNZ","repositoryName":"LokiOfNZ.github.io","branch":"master"},"site":{"title":"Nick's Blog","description":"A Blog about Nick's things.","url":"http://LokiOfNZ.github.io"},"socialnetwork":{"email":"nfoote@live.co.uk"},"theme":{"name":"Casper","url":"http://LokiOfNZ.github.io/themes/Casper"}}
